tests/baselines/reference/for-inStatementsDestructuring(target=es2015).errors.txt
for-inStatementsDestructuring.ts(1,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.


==== for-inStatementsDestructuring.ts (1 errors) ====
    for (var [a, b] in []) {}
             ~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.